// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:damage 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "damage",
      ],
      "form": "damage",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "A",
        "E",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333337,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
      "A",
      "E",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "A",
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 3,
    "vector": {
      "A": 2,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Inward move",
      "normalized": "A → A → E",
      "polarity": "centripetal",
      "raw": "A → A → E",
      "ringDelta": -1,
      "ringFrom": 3,
      "ringTo": 2,
      "steps": 2,
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "to": "E",
      "voices": [
        "A",
        "A",
        "E",
      ],
    },
    "ui": {
      "label": "Inward move",
      "summary": "Moves centripetal from ring 3 to ring 2 (A → E).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A → A → E",
    },
    "voicePath": "A → A → E",
    "voicePathRaw": "A → A → E",
    "voices": [
      "A",
      "A",
      "E",
    ],
    "word": "damage",
  },
  "word": "damage",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:frymë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "frymë",
      ],
      "form": "frymë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "Y",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "Y",
      "Ë",
    ],
    "path": [
      "Y",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 1,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "Y",
      "label": "Outward move",
      "normalized": "Y → Ë",
      "polarity": "centrifugal",
      "raw": "Y → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (Y → Ë).",
      "to": "Ë",
      "voices": [
        "Y",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (Y → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "Y → Ë",
    },
    "voicePath": "Y → Ë",
    "voicePathRaw": "Y → Ë",
    "voices": [
      "Y",
      "Ë",
    ],
    "word": "frymë",
  },
  "word": "frymë",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:gjak 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "gjak",
      ],
      "form": "gjak",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "A",
    ],
    "path": [
      "A",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [],
      "outer": [
        "A",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 1,
    "vector": {
      "A": 1,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Single voice (A)",
      "normalized": "A",
      "polarity": "orbital",
      "raw": "A",
      "ringDelta": 0,
      "ringFrom": 3,
      "ringTo": 3,
      "steps": 0,
      "summary": "Static on ring 3.",
      "to": "A",
      "voices": [
        "A",
      ],
    },
    "ui": {
      "label": "Single voice (A)",
      "summary": "Static on ring 3.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A",
    },
    "voicePath": "A",
    "voicePathRaw": "A",
    "voices": [
      "A",
    ],
    "word": "gjak",
  },
  "word": "gjak",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:gjallë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "gjallë",
      ],
      "form": "gjallë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "A",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: outer",
        "strong imbalance between rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "A",
      "Ë",
    ],
    "path": [
      "A",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [],
      "outer": [
        "A",
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 1,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "A",
      "label": "Same-ring move",
      "normalized": "A → Ë",
      "polarity": "orbital",
      "raw": "A → Ë",
      "ringDelta": 0,
      "ringFrom": 3,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves orbital from ring 3 to ring 3 (A → Ë).",
      "to": "Ë",
      "voices": [
        "A",
        "Ë",
      ],
    },
    "ui": {
      "label": "Same-ring move",
      "summary": "Moves orbital from ring 3 to ring 3 (A → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "A → Ë",
    },
    "voicePath": "A → Ë",
    "voicePathRaw": "A → Ë",
    "voices": [
      "A",
      "Ë",
    ],
    "word": "gjallë",
  },
  "word": "gjallë",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:jetë 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "jetë",
      ],
      "form": "jetë",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "Ë",
    ],
    "path": [
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Outward move",
      "normalized": "E → Ë",
      "polarity": "centrifugal",
      "raw": "E → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "to": "Ë",
      "voices": [
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → Ë",
    },
    "voicePath": "E → Ë",
    "voicePathRaw": "E → Ë",
    "voices": [
      "E",
      "Ë",
    ],
    "word": "jetë",
  },
  "word": "jetë",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:jo 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "jo",
      ],
      "form": "jo",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [
        "pattern:N4:mediator-axis",
      ],
      "vowel_path": [
        "O",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "no voices in rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "O",
    ],
    "path": [
      "O",
    ],
    "rings": {
      "inner": [],
      "mediator": "O",
      "middle": [],
      "outer": [],
    },
    "tension": {
      "notes": [
        "no voices in rings",
      ],
      "score": 0,
    },
    "totalVoices": 1,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 1,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "O",
      "label": "Single voice (O)",
      "normalized": "O",
      "polarity": "orbital",
      "raw": "O",
      "ringDelta": 0,
      "ringFrom": 0,
      "ringTo": 0,
      "steps": 0,
      "summary": "Static on ring 0.",
      "to": "O",
      "voices": [
        "O",
      ],
    },
    "ui": {
      "label": "Single voice (O)",
      "summary": "Static on ring 0.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "O",
    },
    "voicePath": "O",
    "voicePathRaw": "O",
    "voices": [
      "O",
    ],
    "word": "jo",
  },
  "word": "jo",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:po 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "po",
      ],
      "form": "po",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [
        "pattern:N4:mediator-axis",
      ],
      "vowel_path": [
        "O",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "no voices in rings",
      ],
      "score": 0,
    },
    "dominantVoices": [
      "O",
    ],
    "path": [
      "O",
    ],
    "rings": {
      "inner": [],
      "mediator": "O",
      "middle": [],
      "outer": [],
    },
    "tension": {
      "notes": [
        "no voices in rings",
      ],
      "score": 0,
    },
    "totalVoices": 1,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 1,
      "U": 0,
      "Y": 0,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "O",
      "label": "Single voice (O)",
      "normalized": "O",
      "polarity": "orbital",
      "raw": "O",
      "ringDelta": 0,
      "ringFrom": 0,
      "ringTo": 0,
      "steps": 0,
      "summary": "Static on ring 0.",
      "to": "O",
      "voices": [
        "O",
      ],
    },
    "ui": {
      "label": "Single voice (O)",
      "summary": "Static on ring 0.",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "O",
    },
    "voicePath": "O",
    "voicePathRaw": "O",
    "voices": [
      "O",
    ],
    "word": "po",
  },
  "word": "po",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:study 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "study",
      ],
      "form": "study",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "U",
        "Y",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: inner",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "U",
      "Y",
    ],
    "path": [
      "U",
      "Y",
    ],
    "rings": {
      "inner": [
        "U",
      ],
      "mediator": null,
      "middle": [
        "Y",
      ],
      "outer": [],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 0,
      "I": 0,
      "O": 0,
      "U": 1,
      "Y": 1,
      "Ë": 0,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "U",
      "label": "Outward move",
      "normalized": "U → Y",
      "polarity": "centrifugal",
      "raw": "U → Y",
      "ringDelta": 1,
      "ringFrom": 1,
      "ringTo": 2,
      "steps": 1,
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "to": "Y",
      "voices": [
        "U",
        "Y",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 1 to ring 2 (U → Y).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "U → Y",
    },
    "voicePath": "U → Y",
    "voicePathRaw": "U → Y",
    "voices": [
      "U",
      "Y",
    ],
    "word": "study",
  },
  "word": "study",
}
`;

exports[`canon battery v2 (strict) — Seven-Voices Math v1 lock canon:v2:strict:zemër 1`] = `
{
  "candidates": [
    {
      "decomposition": [
        "zemër",
      ],
      "form": "zemër",
      "functional_statement": {
        "action": "",
        "instrument": "",
        "unit": "",
      },
      "language": "unknown",
      "ring_fit": "MIXED",
      "signals": [],
      "vowel_path": [
        "E",
        "Ë",
      ],
    },
  ],
  "decision_geometry": null,
  "engine_meta": {
    "engineVersion": "v1.1.0",
  },
  "language_guess": null,
  "math7_summary": {
    "balance": {
      "notes": [
        "dominant ring: middle",
        "strong imbalance between rings",
      ],
      "score": 0.33333333333333326,
    },
    "dominantVoices": [
      "E",
      "Ë",
    ],
    "path": [
      "E",
      "Ë",
    ],
    "rings": {
      "inner": [],
      "mediator": null,
      "middle": [
        "E",
      ],
      "outer": [
        "Ë",
      ],
    },
    "tension": {
      "notes": [
        "high tension between rings",
      ],
      "score": 1,
    },
    "totalVoices": 2,
    "vector": {
      "A": 0,
      "E": 1,
      "I": 0,
      "O": 0,
      "U": 0,
      "Y": 0,
      "Ë": 1,
    },
  },
  "mode": "strict",
  "stress_test_v1": {
    "classification": {
      "from": "E",
      "label": "Outward move",
      "normalized": "E → Ë",
      "polarity": "centrifugal",
      "raw": "E → Ë",
      "ringDelta": 1,
      "ringFrom": 2,
      "ringTo": 3,
      "steps": 1,
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "to": "Ë",
      "voices": [
        "E",
        "Ë",
      ],
    },
    "ui": {
      "label": "Outward move",
      "summary": "Moves centrifugal from ring 2 to ring 3 (E → Ë).",
      "title": "Seven-Voices Pattern Map (v1)",
      "voicePath": "E → Ë",
    },
    "voicePath": "E → Ë",
    "voicePathRaw": "E → Ë",
    "voices": [
      "E",
      "Ë",
    ],
    "word": "zemër",
  },
  "word": "zemër",
}
`;
